--- a/Project38/Resources/Base.lproj/Main.storyboard
+++ b/Project38/Resources/Base.lproj/Main.storyboard
@@ -58,7 +58,7 @@
         <!--Detail View Controller-->
         <scene sceneID="UFT-16-O65">
             <objects>
-                <viewController storyboardIdentifier="Detail" id="8pd-VP-4Xd" customClass="DetailViewController" customModule="Project38" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="DetailViewController" id="8pd-VP-4Xd" customClass="DetailViewController" customModule="Project38" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="qXQ-Pg-egU">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
